# elikar

./: .gitignore  Cargo.toml  README.md  build.rs  imgui.ini  todo.md
examples/: clipboard.rs  clipboard_tests.rs  drop_file.rs  elika-stage-change.rs  elika_stage_change.rs  elikar.rs  elikar_stage_change.rs  elikar_tests.rs  gl.rs  imgui.rs  imgui_render.rs  keyboard.rs  mouse.rs  mouse_tests.rs  msgbox.rs  msgbox_tests.rs  power.rs  render.rs  sdl_renderer.rs  sdl_renderer_fly_pixel.rs  sdl_renderer_fly_things.rs  sdl_renderer_image.rs  stage.rs  sysinfo.rs  time.rs  vulkan.rs  wgpu.rs  window.rs  window_tests.rs
shaders/: vert.spv  vertex.vert.glsl
shaders/imgui/: frag.spv  imgui.frag.glsl  imgui.vert.glsl  vert.spv
shaders/render2d/: render2d.frag.glsl  render2d.frag.spv  render2d.vert.glsl  render2d.vert.spv
shaders/vulkan_test/: vulkan_test.frag.glsl  vulkan_test.frag.spv
src/: clipboard.rs  common.rs  elikar.rs  event.rs  events.rs  lib.rs  msgbox.rs  power.rs  quit.rs  sysinfo.rs  system_event.rs  time.rs  vulkan_test.rs  window.rs
src/common/: either.rs  mod.rs  sdl_error.rs  signal.rs  sparse_set.rs  spawner.rs
src/drop_file/: event.rs  events.rs
src/elikar/: mod.rs  states.rs  world.rs
src/event/: event.rs  mod.rs  mouse_event.rs
src/events/: enter_frame.rs  leave_frame.rs  mod.rs  quit.rs  render.rs  update.rs
src/ime/: mod.rs
src/imgui/: draw_data.rs  events.rs  mod.rs  ui.rs
src/keyboard/: code.rs  event.rs  events.rs  mod.rs  screen.rs
src/mouse/: button.rs  cursor.rs  mod.rs  motion.rs
src/render/: gl.rs  image.rs  mod.rs  renderer2d.rs  sprite.rs  transform.rs  viewport.rs
src/sdl_renderer/: mod.rs  point.rs  rect.rs  sprite.rs  system.rs
src/sysinfo/: cpu_info.rs  mod.rs  platform_info.rs  video_info.rs
src/system_event/: mod.rs
src/text_input/: mod.rs
src/window/: builder.rs  event.rs  events.rs  manager.rs  mod.rs  raw_handle.rs  window.rs  (+2 more)
tests/: clipboard_tests.rs  elikar_test.rs  elikar_tests.rs  mouse_tests.rs  msgbox_tests.rs  power_tests.rs  sysinfo_tests.rs  window_tests.rs
(+52 files in other folders)
