[package]
name = "elikar"
version = "0.1.0"
authors = ["xstater <l>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2-sys = "0.35"
libc = "0.2"
xecs = "0.4"
xrunits = "0.1.2"
ash = "0.35"
rand = "0.8"
nalgebra-glm = "0.16"
imgui = "0.8.2"
crossbeam = "0.8"
futures = { version = "0.3", features = ["executor","thread-pool"] }

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 2
debug = true
lto = false

[lib]
name = "elikar"
crate-type = ["rlib","dylib"]
