[package]
name = "elikar"
version = "0.1.3"
authors = ["xstater:a166224@163.com"]
edition = "2021"
license = "MIT"
description = "A rust asynchronous ECS game engine"
readme = "README.md"
repository = "https://github.com/xstater/elikar/"
keywords = ["gamedev","ecs","game-engine","asynchronous"]
categories = ["game-development","game-engines","asynchronous","concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2-sys = "0.35"
libc = "0.2"
xecs = "0.5"
xrunits = "0.1.2"
crossbeam = "0.8"
futures = { version = "0.3", features = ["executor","thread-pool"] }
raw-window-handle = "0.4.2"
log = "0.4"

